--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
   <string name="main_tab_name_1">연락처</string>
   <string name="main_tab_name_2">내 정보</string>
     <string name="dialog_name">이름</string>
+  <string name="dialog_num">전화번호</string>
+  <string name="dialog_title">연락처 추가</string>
+  <string name="dialog_mail">이메일</string>
+  <string name="dialog_cancel">취소</string>
+  <string name="dialog_add">추가</string>
 </resources>
