--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
   <string name="dialog_mail">이메일</string>
   <string name="dialog_cancel">취소</string>
   <string name="dialog_add">추가</string>
+  <string name="dialog_more">▽ 더 보기</string>
+  <string name="dialog_group">그룹</string>
+  <string name="dialog_address">주소</string>
+  <string name="dialog_birth">생일</string>
+  <string name="dialog_event">일정</string>
+  <string name="dialog_memo">메모</string>
 </resources>
